# mnn.rn

./: API.md  ARCHITECTURE.md  ARCHITECTURE_FINAL.md  ARCHITECTURE_V2.md  CONTRIBUTING.md  FINAL_IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MnnRn.podspec  QUICK_START.md  README.md  package.json  tsconfig.json
.github/ISSUE_TEMPLATE/: config.yml
android/: build.gradle  gradle.properties
android/src/main/cpp/: CMakeLists.txt  llm_session.cpp  llm_session.h  mls_config.h  mls_log.cpp  mls_log.h  mnn_llm_jni.cpp  utf8_stream_processor.cpp  utf8_stream_processor.hpp
android/src/main/java/com/mnnrn/: MnnRnModule.kt  MnnRnPackage.kt
example/: README.md  app.json  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/mnnrn/example/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/ios/: Podfile
example/ios/MnnRnExample/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
example/ios/MnnRnExample.xcodeproj/: project.pbxproj
example/ios/MnnRnExample.xcodeproj/xcshareddata/xcschemes/: MnnRnExample.xcscheme
example/src/: App.tsx
example/src/screens/: ChatScreen.tsx  ConfigScreen.tsx  DownloadScreen.tsx
example/src/types/: index.ts
example/src/utils/: configUtils.ts
ios/: MnnRn.h  MnnRn.mm
src/: NativeMnnRn.ts  index.tsx
